Filling Hotkeys Done

--- a/HotkeyHelper/HotkeyHelper.csproj
+++ b/HotkeyHelper/HotkeyHelper.csproj
@@ -1,3 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$(SolutionDir)\cowstuff.targets" />
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
 </Project>
